--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
     -->
   <title>React App</title>
   <script src="https://use.fontawesome.com/ce2de00978.js"></script>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
